* 22/08/14 - v.2.0.5
   - added the possibility to select the spinBarrier barrier in the parallel-for pattern (by default is enabled blocking barrier)
   - revised version of OpenCL patterns (still experimental)
   - OpenCL map/reduce/mapreduce patters are now in the mapOCL.hpp file
   - spinBarrier::barrierSetup revised
   - *** changed 'thaw' semantic ***. 
     If the function is called and the current thread is not in the frozen 
     state, then the thread will not be put to sleep when it reaches 
     the next freezing point.
   - introduced the ff_taskf pattern (first non-recursive version)
   - moved some code from mdf.hpp to tasks_internals.hpp
   - if set_scheduling_ondemand is called with 0 as parameter then the 
     scheduling policy is NOT set to ondemand (i.e. the value should be >=1).
   - introduced ff_minode_t and ff_monode_t, changed the interface (now typed)
     of the ff_Map<S,T>
   - introduced ff_node_t a wrapper template class around the ff_node class
   - the ff_send_out now works also inside the Emitter and Collector of the 
     ordered farm (ofarm)
   - removed FF_PIPE macros
   - if spinWait is set to true in the parallel for, than spinBarrier is used as loop barrier
   - removed barrier implementation from node.hpp and created a new file barrier.hpp
   - fixed a bug in the init_data_static function (ParallelFor related)
   - fixed some problems appearing when remove_collector is called
   - an ff_minode can be used in place of the ff_node (i.e. when there is no need to 
     use an ff_minode, indeed) 
   - first version of the ParallelForPipeReduce pattern
   - fixed problem with run_then_freeze for the ff_minode and ff_monode
* 24/01/14 - v.2.0.4
   - poolEvolution interface improved
   - introduced the threadPause() method in the ParallelFor/Reduce patterns. 
     It may be used to  put threads to sleep when the spinwait flag is set 
     and the parallel for is not   used for a while