@@ -40,12 +40,19 @@
 #include <iostream>
 #include <ff/pipeline.hpp>
 #include <ff/farm.hpp>
-#include <ff/allocator.hpp>
-
 
 using namespace ff;
 
+#if defined(USE_FF_ALLOCATOR)
+#define MAKE_VALGRIND_HAPPY 1
+#include <ff/allocator.hpp>
 static ff_allocator ffalloc;
+#define MALLOC(X) ffalloc.malloc(X)
+#define FREE(X)   ffalloc.free(X)
+#else
+#define MALLOC(X) ::malloc(X)
+#define FREE(X)   ::free(X)
+#endif
 
 class Stage1: public ff_node {
 public:
@@ -53,17 +60,17 @@ public:
 
     void * svc(void *) {
         int * t;
-        t = (int*)ffalloc.malloc(sizeof(int));
+        t = (int*)MALLOC(sizeof(int));
         if (!t) abort();
         
         *t=cnt++;
         if (cnt > streamlen) {
-            ffalloc.free(t);
+            FREE(t);
             t = NULL; // EOS
         }
         return t;
     }
-
+#if defined(USE_FF_ALLOCATOR)
     int   svc_init() { 
         if (ffalloc.registerAllocator()<0) {
             error("registerAllocator fails\n");
@@ -71,6 +78,7 @@ public:
         }
         return 0; 
     }
+#endif
 
 private:
     unsigned int streamlen;
@@ -100,11 +108,11 @@ public:
         int * t = (int *)task;
         if (!t)  abort();
         sum +=*t;
-        ffalloc.free(task);
+        FREE(task);
         task = GO_ON; // we want to be sure to continue
         return task;
     }
-
+#if defined(USE_FF_ALLOCATOR)
     int   svc_init() { 
         if (ffalloc.register4free()<0) {
             error("register4free fails\n");
@@ -113,6 +121,7 @@ public:
         
         return 0; 
     }
+#endif
     void  svc_end() {
         std::cout << "Sum: " << sum << "\n";
     }
@@ -133,19 +142,22 @@ int main(int argc, char * argv[]) {
         streamlen = atoi(argv[1]);
     }
 
+#if defined(USE_FF_ALLOCATOR)
     // init allocator
     ffalloc.init();
+#endif
 
-    // bild main pipeline
+#if 1 // first version using cleanup_nodes 
     ff_pipeline pipe;
     pipe.add_stage(new Stage1(streamlen));
 
-    ff_pipeline pipe2;
-    pipe2.add_stage(new Stage2_1);
-    pipe2.add_stage(new Stage2_2);
+    ff_pipeline *pipe2=new ff_pipeline;
+    pipe2->cleanup_nodes();  // cleanup at exit
+    pipe2->add_stage(new Stage2_1);
+    pipe2->add_stage(new Stage2_2);
 
     // add the farm module as a second pipeline stage
-    pipe.add_stage(&pipe2);
+    pipe.add_stage(pipe2);
 
     // add last stage to the main pipeline
     pipe.add_stage(new Stage3);
@@ -154,7 +166,34 @@ int main(int argc, char * argv[]) {
         error("running pipeline\n");
         return -1;
     }
+    pipe.cleanup_nodes(); // cleanup at exit
+#else // second version allocating stages on the stack 
 
+    // build main pipeline
+    ff_pipeline pipe2; // must be before pipe, because of destruction sequence
+    ff_pipeline pipe;
+
+    Stage1 s1(streamlen);
+    pipe.add_stage(&s1);
+
+    Stage2_1 s21;
+    Stage2_2 s22;
+    pipe2.add_stage(&s21);
+    pipe2.add_stage(&s22);
+
+    // add the farm module as a second pipeline stage
+    pipe.add_stage(&pipe2);
+
+    // add last stage to the main pipeline
+    Stage3 s3;
+    pipe.add_stage(&s3);
+
+    if (pipe.run_and_wait_end()<0) {
+        error("running pipeline\n");
+        return -1;
+    }
+    // no cleanup needed here
+#endif
     pipe.ffStats(std::cout);
 
     return 0;
