@@ -1,4 +1,5 @@
 * 22/08/14 - v.2.0.5
+   - fixed a problem in the fftree usage
    - added the possibility to select the spinBarrier barrier in the parallel-for pattern (by default is enabled blocking barrier)
    - revised version of OpenCL patterns (still experimental)
    - OpenCL map/reduce/mapreduce patters are now in the mapOCL.hpp file
